# PocketFlow-YT-Summarizer

./: .env.example  .gitignore  CLAUDE.md  README.md  UV_MIGRATION.md  demo.ipynb  flow.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: design.md  pocketflow_rag.md
examples/: Competition_is_for_Losers_with_Peter_Thiel.html  DeepSeek, China, OpenAI, NVIDIA, xAI, TSMC, Stargate, and AI Megaclusters | Lex Fridman Podcast #459.html  Demis Hassabis – Scaling, Superhuman AIs, AlphaZero atop LLMs, AlphaFold.html  Elon Musk: War, AI, Aliens, Politics, Physics, Video Games, and Humanity | Lex Fridman Podcast #400.html  Full_interview_Godfather_of_artificial_intelligence_talks_impact_and_potential_of_AI.html  In conversation with President Trump.html  In_conversation_with_Elon_Musk_Twitters_bot_problem_SpaceXs_grand_plan_Tesla_stories__more.html  In_conversation_with_Tucker_Carlson_plus_OpenAI_chaos_explained.html  Jeff_Dean__Noam_Shazeer_-_25_years_at_Google_from_PageRank_to_AGI.html  Jonathan Ross, Founder & CEO @ Groq: NVIDIA vs Groq - The Future of Training vs Inference | E1260.html  MrBeast Shares His Most Controversial Business Advice.html  NVIDIA_CEO_Jensen_Huangs_Vision_for_the_Future.html  Sarah_C._M._Paine_-_Why_Dictators_Keep_Making_the_Same_Fatal_Mistake.html  Satya_Nadella_-_Microsofts_AGI_Plan__Quantum_Breakthrough.html  The_Future_Mark_Zuckerberg_Is_Trying_To_Build.html  The_Stablecoin_Future_Mileis_Memecoin_DOGE_for_the_DoD_Grok_3_Why_Stripe_Stays_Private.html  Tucker Carlson: Putin, Navalny, Trump, CIA, NSA, War, Politics & Freedom | Lex Fridman Podcast #414.html  Volodymyr Zelenskyy: Ukraine, War, Peace, Putin, Trump, NATO, and Freedom | Lex Fridman Podcast #456.html
output/: Sharpen Your Skills Session - Compass & Scanners SpotGamma_gemini.html  Sharpen Your Skills Session - Compass & Scanners SpotGamma_openai.html  Short Vol with a Side of Vanna wMat Cashman (OCC) SpotGamma_gemini.html  Short Vol with a Side of Vanna wMat Cashman (OCC) SpotGamma_openai.html  Subscriber Q&A 7325 SpotGamma.html  Subscriber Q&A 7325 SpotGamma_gemini.html  Subscriber Q&A 7325 SpotGamma_openai.html
scripts/: run.sh  test.sh
tests/: __init__.py  test_call_llm.py  test_cli.py  test_config.py  test_flow.py  test_task_models.py
utils/: call_llm.py  html_generator.py  output.html  youtube_processor.py
